fixed z-index bug in hub screen

--- a/src/app/modules/hub/hub.component.scss
+++ b/src/app/modules/hub/hub.component.scss
@@ -10,7 +10,7 @@
   // }
   #hub-tab::ng-deep.mat-tab-header {
     position: absolute;
-    z-index: 100000;
+    z-index: 3; //100000;
   }
   .tab-content {
     margin-top: 60px;
@@ -27,6 +27,10 @@
   //   min-width: 7.313em !important;
   //   margin-top: 2.313em;
   // }
+
+  #hub-tab::ng-deep .mat-tab-body-content {
+    overflow-x: hidden !important;
+  }
 
   #mat-search ::ng-deep .mat-form-field-underline {
     background-color: var(--btn-lightgray-border);
@@ -220,7 +224,7 @@
   // }
   #hub-tab::ng-deep.mat-tab-header {
     position: absolute;
-    z-index: 100000;
+    z-index: 3; //100000;
   }
   .tab-content {
     margin-top: 60px;
@@ -237,6 +241,10 @@
   //   min-width: 7.313em !important;
   //   margin-top: 2.313em;
   // }
+
+  #hub-tab::ng-deep .mat-tab-body-content {
+    overflow: hidden !important;
+  }
 
   #mat-search ::ng-deep .mat-form-field-underline {
     background-color: var(--btn-lightgray-border);
